--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/platform-browser-dynamic": "^16.2.12",
     "@angular/router": "^16.2.12",
     "@ngneat/overview": "^5.1.1",
+    "@ngrx/effects": "^17.1.1",
+    "@ngrx/store": "^17.1.1",
+    "@ngrx/store-devtools": "^17.1.1",
     "firebase": "^10.8.0",
     "moment": "^2.30.1",
     "ng-otp-input": "^1.9.3",
@@ -42,6 +45,6 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.1.3"
   }
 }
