--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ngx-mask": "^14.2.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "typescript": "^5.4.3",
     "zone.js": "^0.14.2"
   },
   "devDependencies": {
@@ -44,7 +45,6 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "^5.1.3"
+    "karma-jasmine-html-reporter": "~1.7.0"
   }
 }
